1, Finish generate sms. 2, Finish create common user.
